--- a/src/assets/i18n/hy.json
+++ b/src/assets/i18n/hy.json
@@ -36,9 +36,12 @@
     "addTitle": "Ավելացնել նոր աշխատակից",
     "editTitle": "Փոփոխել աշխատակցի տվյալները",
     "delTitle": "Վստա՞հ եք, որ ցանկանում եք ջնջել այս աշխատակցին",
+    "workingTime": "Աշխատակիցների աշխատանքային ժամանակը",
     "btnSave": "Պահպանել",
     "btnCancel": "Չեղարկել",
     "btnUpdate": "Թարմացնել",
-    "btnDelete": "Ջնջել"
+    "btnDelete": "Ջնջել",
+    "btnClose": "Փակել",
+    "time": "Ժամ"
   }
 }
