--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -36,9 +36,12 @@
     "addTitle": "Добавить нового сотрудника",
     "editTitle": "Изменить данные сотрудника",
     "delTitle": "Вы уверены, что хотите удалить этого сотрудника?",
+    "workingTime": "Рабочее время сотрудника",
     "btnSave": "Сохранить",
     "btnCancel": "Отмена",
     "btnUpdate": "Обновить",
-    "btnDelete": "Удалить"
+    "btnDelete": "Удалить",
+    "btnClose": "Закрыть",
+    "time": "Часы"
   }
 }
