--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -43,5 +43,9 @@
     "btnDelete": "Удалить",
     "btnClose": "Закрыть",
     "time": "Часы"
+  },
+  "navBarItem": {
+    "login": "Вход",
+    "logout": "Выход"
   }
 }
