--- a/src/assets/i18n/ru.json
+++ b/src/assets/i18n/ru.json
@@ -23,7 +23,8 @@
     "del": "Удалить",
     "edit": "Изменить",
     "sBtn": "Поиск",
-    "countBtn": "Подсчитывать"
+    "countBtn": "Подсчитывать",
+    "resetBtn": "Сброс"
   },
   "pickerTitle": {
     "start": "От",
